[gd_scene load_steps=6 format=3 uid="uid://c7v4yfsnj5bbb"]

[ext_resource type="Script" path="res://levels/test_world.gd" id="1_w1174"]
[ext_resource type="PackedScene" uid="uid://c6vt1k76gd1yo" path="res://levels/flat_ground.tscn" id="2_njqvn"]
[ext_resource type="Texture2D" uid="uid://n6kea6j5gg5q" path="res://sprites/kenney_particle_pack/circle_05.png" id="3_pms7b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_di03d"]
bg_color = Color(0.8, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wrtd6"]
bg_color = Color(0, 0.8, 0, 1)

[node name="game" type="Node3D"]
script = ExtResource("1_w1174")

[node name="entities" type="Node" parent="."]

[node name="level" type="Node" parent="."]

[node name="world" parent="level" instance=ExtResource("2_njqvn")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_right = 360.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_di03d")
theme_override_styles/fill = SubResource("StyleBoxFlat_wrtd6")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -5.99997
offset_right = 506.0
offset_bottom = 506.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.025, 0.025)
texture = ExtResource("3_pms7b")
stretch_mode = 5

[node name="ConnectMenu" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -120.0
offset_right = 190.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ConnectMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ConnectMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/ConnectMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Connect Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/ConnectMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/ConnectMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/ConnectMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address To Join Here"
alignment = 1

[node name="NetworkOption" type="OptionButton" parent="CanvasLayer/ConnectMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "Internet"
popup/item_0/id = 0
popup/item_1/text = "Local"
popup/item_1/id = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://entities/characters/player.tscn", "res://entities/weapons/projectile.tscn", "res://entities/weapons/bullet_impact.tscn", "res://entities/weapons/physmat_bullet_impact.tscn")
spawn_path = NodePath("../entities")

[connection signal="pressed" from="CanvasLayer/ConnectMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
